load_testing/trainticket-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"locust-master","namespace":"loadgen"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"locust-master"}},"template":{"metadata":{"labels":{"app":"locust-master"}},"spec":{"containers":[{"args":["-f","/mnt/trainticket_locustfile.py","--headless","-u","100","-r","20","--mcr-csv","/mnt/mcr.csv","--max-requests","300","--user-pool","100","--test-hours","0.1"],"env":[{"name":"MCR_CSV","value":"/mnt/mcr.csv"},{ [...]
  name: locust-master
  namespace: loadgen
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: locust-master
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-09-26T04:00:34-05:00"
      labels:
        app: locust-master
    spec:
      containers:
      - args:
        - -f
        - /mnt/trainticket_locustfile.py
        - --headless
        - -u
        - "100"
        - -r
        - "20"
        - --mcr-csv
        - /mnt/mcr.csv
        - --max-requests
        - "600"
        - --user-pool
        - "100"
        - --host
        - http://dummy
        image: docker.io/locustio/locust:2.43.4
        imagePullPolicy: IfNotPresent
        name: locust
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /mnt/trainticket_locustfile.py
          name: lf
          subPath: trainticket_locustfile.py
        - mountPath: /mnt/mcr.csv
          name: mcr
          subPath: mcr.csv
        - mountPath: /mnt/users.json
          name: users
          subPath: users.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: tt-locustfile
        name: lf
      - configMap:
          defaultMode: 420
          name: tt-mcr
        name: mcr
