load_testing/trainticket-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: train-ticket
  namespace: train-ticket
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  tls:
  - hosts: [train-ticket.younesnb.linkpc.net]
    secretName: trainticket-tls
  rules:
  - host: train-ticket.younesnb.linkpc.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ts-ui-dashboard
            port: {number: 8080}
